
[build-system]
requires = ["setuptools >= 69.1"]
build-backend = "setuptools.build_meta"

[project]
name = "cardmarketwatch"
version = "0.0.1"
dependencies = [
    "selenium",
    "pandas",
    "openpyxl",
]
requires-python = ">= 3.12"

[tool.pytest.ini_options]
markers = [
    "slow: too slow to always run during development",
]

