
[build-system]
requires = ["setuptools >= 69.1"]
build-backend = "setuptools.build_meta"

[project]
name = "cardmarketwatch"
version = "0.0.1"
dependencies = [
    "selenium",
]
requires-python = ">= 3.13"

[tool.pytest.ini_options]
markers = [
    "slow: too slow to always run during development",
]

